@@ -21,6 +21,10 @@
   + KGySoft.Drawing.ImagingTools.Model namespace:
     + New CustomColorInfo class: New CustomColorComponents property
 
++ KGySoft.Drawing.DebuggerVisualizers.Wpf.dll
+=============================================
++ Better support of ScRGB and color profile-based colors.
+
 
 ~~~~~~~~~
 + v3.1.0:
